# RayTracingDemo

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/raytracer/: ray_tracer.cpp  ray_tracer.hpp
src/scene/: scene.hpp
src/utility/: conversions.cpp  conversions.hpp  logger.cpp  logger.hpp
